[gd_scene load_steps=33 format=1]

[ext_resource path="res://scripts/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://images/menu_background.png" type="Texture" id=2]
[ext_resource path="res://polices/goodtimes.fnt" type="BitmapFont" id=3]
[ext_resource path="res://images/bullet.png" type="Texture" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=10]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=11]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=12]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=13]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=14]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=15]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=16]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=17]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=18]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=19]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=20]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="CanvasItemShader" id=21]

_code = {
"fragment": "COLOR.rgb=COLOR.gbr;",
"fragment_ofs": 0,
"light": "",
"light_ofs": 0,
"vertex": "",
"vertex_ofs": 0
}

[sub_resource type="CanvasItemMaterial" id=22]

shader/shader = SubResource( 21 )
shader/shading_mode = 0

[sub_resource type="CanvasItemShader" id=23]

_code = {
"fragment": "uniform float amplitude = 60;
uniform float vitesse = 3;
vec4 normal = tex(TEXTURE,UV);
vec2 offset = normal.xy;
COLOR.rgb=texscreen(vec2(SCREEN_UV.x-offset.x*abs(sin(TIME*vitesse)/amplitude), SCREEN_UV.y));
COLOR.rgb=COLOR.gbr;",
"fragment_ofs": 0,
"light": "",
"light_ofs": 0,
"vertex": "",
"vertex_ofs": 0
}

[sub_resource type="CanvasItemMaterial" id=24]

shader/shader = SubResource( 23 )
shader/shading_mode = 0
shader_param/amplitude = 60.0
shader_param/vitesse = 1.5

[sub_resource type="StyleBoxEmpty" id=25]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxTexture" id=26]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 4 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxEmpty" id=27]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="Animation" id=28]

resource/name = "AnimationFight"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.5 ]
}

[node name="MainMenu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/pos = Vector2( 512, 320 )
transform/scale = Vector2( 32, 20 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]

rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 56.0
margin/top = 201.0
margin/right = 1003.0
margin/bottom = 665.0
custom_constants/separation = 50
alignment = 0

[node name="SinglePlayer" type="MenuButton" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 947.0
margin/bottom = 107.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "SINGLEPLAYER"
flat = false
align = 0
items = [  ]

[node name="Multiplayer" type="MenuButton" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 157.0
margin/right = 947.0
margin/bottom = 264.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "MULTIPLAYER"
flat = true
align = 0
items = [  ]

[node name="Credits" type="MenuButton" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 314.0
margin/right = 947.0
margin/bottom = 421.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "CREDITS"
flat = true
align = 0
items = [  ]

[node name="Exit" type="MenuButton" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 471.0
margin/right = 947.0
margin/bottom = 578.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "EXIT"
flat = true
align = 0
items = [  ]

[node name="Title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 137.0
margin/top = 21.0
margin/right = 905.0
margin/bottom = 128.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.2 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 10
text = "OfficeFIght"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Selected" type="Label" parent="."]

editor/display_folded = true
material/material = SubResource( 22 )
rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 200.0
margin/right = 93.0
margin/bottom = 307.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.2 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 10
text = ">"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Shader" type="Sprite" parent="Selected"]

material/material = SubResource( 24 )
transform/pos = Vector2( 772.5, 54.9999 )
transform/rot = -0.000568611
transform/scale = Vector2( 41.25, 5.07759 )
texture = ExtResource( 2 )

[node name="Fight" type="Button" parent="."]

rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 825.0
margin/top = 489.0
margin/right = 1180.0
margin/bottom = 844.0
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 26 )
custom_styles/focus = SubResource( 27 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "FIGHT"
flat = true

[node name="AnimationFight" type="AnimationPlayer" parent="Fight"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/AnimationFight = SubResource( 28 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "AnimationFight"

[connection signal="mouse_enter" from="VBoxContainer/SinglePlayer" to="." method="_on_SinglePlayer_mouse_enter"]

[connection signal="released" from="VBoxContainer/SinglePlayer" to="." method="_on_SinglePlayer_released"]

[connection signal="mouse_enter" from="VBoxContainer/Multiplayer" to="." method="_on_Multiplayer_mouse_enter"]

[connection signal="released" from="VBoxContainer/Multiplayer" to="." method="_on_Multiplayer_released"]

[connection signal="mouse_enter" from="VBoxContainer/Credits" to="." method="_on_Credits_mouse_enter"]

[connection signal="released" from="VBoxContainer/Credits" to="." method="_on_Credits_released"]

[connection signal="mouse_enter" from="VBoxContainer/Exit" to="." method="_on_Exit_mouse_enter"]

[connection signal="released" from="VBoxContainer/Exit" to="." method="_on_Exit_released"]

[connection signal="pressed" from="Fight" to="." method="_on_Fight_pressed"]


